--- a/index.html
+++ b/index.html
@@ -1,28 +1,221 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Hank Quinlan, Horrible Cop</title>
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
-			</ul>
-		</footer>
-	</body>
+  <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-T0W3H3S5X1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || []
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date())
+
+    gtag('config', 'G-T0W3H3S5X1')
+    </script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="text/javascript" charset="UTF-8" src="//cdn.cookie-script.com/s/fc326b2e3cb3331ff007fe4f641653db.js"></script>
+    <title>Projects</title>
+    <meta name='dmca-site-verification' content='Y3A3L2ZaNUpaOUhpaU4vQjdxOWhtNEZXSW45U1Y1UEhGVVFVcm83WGFVVT01' />
+  
+    <div id="google_translate_element"></div>
+
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+}
+</script>
+
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
+  </head>
+  <!-- Ads -->
+  <script type='text/javascript' src='//rancidmorsel.com/93/71/ca/9371ca83bf8e1c82fe7d86edb9a8f75b.js'></script>
+
+  <script async="async" data-cfasync="false" src="//rancidmorsel.com/181b21be2ca72fa376127d3a71209f0a/invoke.js"></script>
+  <div id="container-181b21be2ca72fa376127d3a71209f0a"></div>
+
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+    }
+   .project {
+      margin-bottom: 20px;
+    }
+   .project-name {
+      font-size: 24px;
+      font-weight: bold;
+    }
+   .project-description {
+      margin-top: 5px;
+    }
+   .project-button {
+      margin-top: 10px;
+      padding: 10px 20px;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+   .project-button:hover {
+      background-color: #45a049;
+    }
+    /* Add the following CSS for responsiveness */
+    @media (max-width: 768px) {
+     .project {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+     .project-name,
+     .project-description,
+     .project-button {
+        width: 100%;
+        margin-left: 0;
+        margin-right: 0;
+      }
+     .project-button {
+        margin-top: 10px;
+      }
+    }
+  </style>
+
+<script>
+  const platform = navigator.platform;
+  const isApple = platform.indexOf('Mac')!== -1 || platform.indexOf('iPhone')!== -1 || platform.indexOf('iPad')!== -1;
+
+  if (isApple) {
+  const adminPin = 865;
+  let storedPin = localStorage.getItem('adminPin');
+
+  if (storedPin === adminPin.toString()) {
+    // PIN is already stored, allow access
+  } else {
+    let pinEntered = prompt('Enter admin PIN to disable isApple:');
+
+    if (pinEntered === adminPin.toString()) {
+      // Store the PIN in localStorage
+      localStorage.setItem('adminPin', pinEntered);
+    } else {
+      alert('You are not allowed to access this page, you are using apple!');
+      document.body.innerHTML = '<h1>You are not allowed to access this page, just do NOT use apple!</h1>';
+      document.body.style.backgroundColor = '';
+      document.body.style.border = '1px solid black';
+
+      let color = 'ed';
+      setInterval(() => {
+        if (color === 'ed') {
+          document.body.style.backgroundColor = 'blue';
+          color = 'blue';
+        } else {
+          document.body.style.backgroundColor = 'ed';
+          color = 'ed';
+        }
+      }, 1000);
+
+      function spawnBlock() {
+        const block = document.createElement('div');
+        block.className = 'block';
+        block.style.width = '100px';
+        block.style.height = '100px';
+        block.style.backgroundColor = 'green';
+        block.style.position = 'absolute';
+        block.style.left = `${Math.floor(Math.random() * (document.documentElement.clientWidth - 100))}px`;
+        block.style.top = `${Math.floor(Math.random() * (document.documentElement.clientHeight - 100))}px`;
+        document.body.appendChild(block);
+      }
+
+      setInterval(spawnBlock, 10);
+
+      document.addEventListener('click', function() {
+        window.location.href = 'https://ponk445.42web.io/stopusingapple.html';
+      });
+    }
+  }
+}
+</script>
+
+<style>
+.block {
+    width: 100px;
+    height: 100px;
+    background-color: green;
+    position: absolute;
+  }
+</style>
+
+  <body>
+    <h1>Projects</h1>
+    <div class="project">
+      <div class="project-name">Adress comparer</div>
+      <div class="project-description">If you are ever in need of it, use it.</div>
+      <button class="project-button" onclick="window.location.href='https://ponk445.42web.io/adress-comparer.html'">View</button>
+    </div>
+    <div class="project">
+      <div class="project-name">Gadgets</div>
+      <div class="project-description">All in 1</div>
+      <button class="project-button" onclick="window.location.href='https://ponk445.42web.io/gadgets/gadgetpage.html'">View</button>
+    </div>
+    <div class="project">
+      <div class="project-name">Games</div>
+      <div class="project-description">the good old games.</div>
+      <button class="project-button" onclick="window.location.href='https://ponk445.42web.io/games-rt/games-rtpage.html'">View</button>
+    </div>
+    <div class="project">
+      <div class="project-name">Guess the number</div>
+      <div class="project-description">Can you guess the number?</div>
+      <button class="project-button" onclick="window.location.href='https://ponk445.42web.io/guess-game.html'">View</button>
+    </div>
+    <div class="project">
+      <div class="project-name">Textbox</div>
+      <div class="project-description">Take notes and save it</div>
+      <button class="project-button" onclick="window.location.href='https://ponk445.42web.io/textboxfolder/textbox.html'">View</button>
+    </div>
+    <div class="project">
+      <div class="project-name">Drawbox</div>
+      <div class="project-description">Draw and save it</div>
+      <button class="project-button" onclick="window.location.href='https://ponk445.42web.io/drawbox/draw.html'">View</button>
+    </div>
+    <div class="project">
+      <div class="project-name">BTC price</div>
+      <div class="project-description">The price of Bitcoin, in real time.</div>
+      <button class="project-button" onclick="window.location.href='https://ponk445.42web.io/btc/btc.html'">View</button>
+    </div>
+    <div class="project">
+      <div class="project-name">Rock-Paper-Scissor</div>
+      <div class="project-description">Can you win?</div>
+      <button class="project-button" onclick="window.location.href='https://ponk445.42web.io/rpc/rpcgame.html'">View</button>
+    </div>
+    <div class="project">
+      <div class="project-name">KenanDash</div>
+      <div class="project-description">Give it a try.</div>
+      <button class="project-button" onclick="window.location.href='https://ponk445.42web.io/kenandash.html'">View</button>
+    </div>
+    <div class="project">
+      <div class="project-name">Memebuttons</div>
+      <div class="project-description">Quickly meme your friends.</div>
+      <button class="project-button" onclick="window.location.href='https://ponk445.42web.io/funsite/memesounds.html'">View</button>
+    </div>
+    <div class="project">
+      <div class="project-name">Fishy Vid</div>
+      <div class="project-description">Fish your friends.</div>
+      <button class="project-button" onclick="window.location.href='https://ponk445.42web.io/funsite/funpage.html'">View</button>
+    </div>
+
+    <h3>real projects... admin password required</h3>
+    <div class="project">
+      <div class="project-name">KenanGov</div>
+      <div class="project-description">A government, but different... see it yourself.</div>
+      <button class="project-button" onclick="window.location.href='https://ponk445.42web.io/gov/govmainpage.html'">see</button>
+    </div>
+   <h4>.............................</h4>
+
+  </body>
+    <div class="BTC-Gift">I would be happy about a gift:</div> <h5 id="btc-address">bc1qvmazl9djgs2nxaa09urwf0dhwyg7n3g6z6wm62</h5>
+    <script>
+      document.getElementById('btc-address').addEventListener('click', function() {
+        navigator.clipboard.writeText(this.innerText);
+        alert('Bitcoin address copied to clipboard!');
+      });
+    </script>
+    <div class="say-its-dmca">Yes, this site is protected, thanks to DMCA.</div>
+    <a href="//www.dmca.com/Protection/Status.aspx?ID=a4d0dcbf-792e-44f4-b5a3-52e109fe3896" title="DMCA.com Protection Status" class="dmca-badge"> <img src ="https://images.dmca.com/Badges/dmca_protected_sml_120n.png?ID=a4d0dcbf-792e-44f4-b5a3-52e109fe3896"  alt="DMCA.com Protection Status" /></a>  <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script>
 </html>
