--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ function googleTranslateElementInit() {
       setInterval(spawnBlock, 10);
 
       document.addEventListener('click', function() {
-        window.location.href = 'https://ponk445.42web.io/stopusingapple.html';
+        window.location.href = 'https://ponk445.frii.site/stopusingapple.html';
       });
     }
   }
@@ -147,64 +147,64 @@ function googleTranslateElementInit() {
     <div class="project">
       <div class="project-name">Adress comparer</div>
       <div class="project-description">If you are ever in need of it, use it.</div>
-      <button class="project-button" onclick="window.location.href='https://ponk445.42web.io/adress-comparer.html'">View</button>
+      <button class="project-button" onclick="window.location.href='https://ponk445.frii.site/adress-comparer.html'">View</button>
     </div>
     <div class="project">
       <div class="project-name">Gadgets</div>
       <div class="project-description">All in 1</div>
-      <button class="project-button" onclick="window.location.href='https://ponk445.42web.io/gadgets/gadgetpage.html'">View</button>
+      <button class="project-button" onclick="window.location.href='https://ponk445.frii.site/gadgets/gadgetpage.html'">View</button>
     </div>
     <div class="project">
       <div class="project-name">Games</div>
       <div class="project-description">the good old games.</div>
-      <button class="project-button" onclick="window.location.href='https://ponk445.42web.io/games-rt/games-rtpage.html'">View</button>
+      <button class="project-button" onclick="window.location.href='https://ponk445.frii.site/games-rt/games-rtpage.html'">View</button>
     </div>
     <div class="project">
       <div class="project-name">Guess the number</div>
       <div class="project-description">Can you guess the number?</div>
-      <button class="project-button" onclick="window.location.href='https://ponk445.42web.io/guess-game.html'">View</button>
+      <button class="project-button" onclick="window.location.href='https://ponk445.frii.site/guess-game.html'">View</button>
     </div>
     <div class="project">
       <div class="project-name">Textbox</div>
       <div class="project-description">Take notes and save it</div>
-      <button class="project-button" onclick="window.location.href='https://ponk445.42web.io/textboxfolder/textbox.html'">View</button>
+      <button class="project-button" onclick="window.location.href='https://ponk445.frii.site/textboxfolder/textbox.html'">View</button>
     </div>
     <div class="project">
       <div class="project-name">Drawbox</div>
       <div class="project-description">Draw and save it</div>
-      <button class="project-button" onclick="window.location.href='https://ponk445.42web.io/drawbox/draw.html'">View</button>
+      <button class="project-button" onclick="window.location.href='https://ponk445.frii.site/drawbox/draw.html'">View</button>
     </div>
     <div class="project">
       <div class="project-name">BTC price</div>
       <div class="project-description">The price of Bitcoin, in real time.</div>
-      <button class="project-button" onclick="window.location.href='https://ponk445.42web.io/btc/btc.html'">View</button>
+      <button class="project-button" onclick="window.location.href='https://ponk445.frii.site/btc/btc.html'">View</button>
     </div>
     <div class="project">
       <div class="project-name">Rock-Paper-Scissor</div>
       <div class="project-description">Can you win?</div>
-      <button class="project-button" onclick="window.location.href='https://ponk445.42web.io/rpc/rpcgame.html'">View</button>
+      <button class="project-button" onclick="window.location.href='https://ponk445.frii.site/rpc/rpcgame.html'">View</button>
     </div>
     <div class="project">
       <div class="project-name">KenanDash</div>
       <div class="project-description">Give it a try.</div>
-      <button class="project-button" onclick="window.location.href='https://ponk445.42web.io/kenandash.html'">View</button>
+      <button class="project-button" onclick="window.location.href='https://ponk445.frii.site/kenandash.html'">View</button>
     </div>
     <div class="project">
       <div class="project-name">Memebuttons</div>
       <div class="project-description">Quickly meme your friends.</div>
-      <button class="project-button" onclick="window.location.href='https://ponk445.42web.io/funsite/memesounds.html'">View</button>
+      <button class="project-button" onclick="window.location.href='https://ponk445.frii.site/funsite/memesounds.html'">View</button>
     </div>
     <div class="project">
       <div class="project-name">Fishy Vid</div>
       <div class="project-description">Fish your friends.</div>
-      <button class="project-button" onclick="window.location.href='https://ponk445.42web.io/funsite/funpage.html'">View</button>
+      <button class="project-button" onclick="window.location.href='https://ponk445.frii.site/funsite/funpage.html'">View</button>
     </div>
 
     <h3>real projects... admin password required</h3>
     <div class="project">
       <div class="project-name">KenanGov</div>
       <div class="project-description">A government, but different... see it yourself.</div>
-      <button class="project-button" onclick="window.location.href='https://ponk445.42web.io/gov/govmainpage.html'">see</button>
+      <button class="project-button" onclick="window.location.href='https://ponk445.frii.site/gov/govmainpage.html'">see</button>
     </div>
    <h4>.............................</h4>
 
