--- a/index.html
+++ b/index.html
@@ -217,5 +217,6 @@ function googleTranslateElementInit() {
       });
     </script>
     <div class="say-its-dmca">Yes, this site is protected, thanks to DMCA.</div>
+    <a href="//www.dmca.com/Protection/Status.aspx?ID=a4d0dcbf-792e-44f4-b5a3-52e109fe3896" title="DMCA.com Protection Status" class="dmca-badge"> <img src ="https://images.dmca.com/Badges/dmca_protected_sml_120n.png?ID=a4d0dcbf-792e-44f4-b5a3-52e109fe3896"  alt="DMCA.com Protection Status" /></a>  <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script>
     <a href="https://www.dmca.com/compliance/ponk445.frii.site" title="DMCA Compliance information for ponk445.frii.site"><img src="https://www.dmca.com/img/dmca-compliant-grayscale.png" alt="DMCA compliant image" /></a>
 </html>
