game links working now

--- a/games-rt/games-rtpage.html
+++ b/games-rt/games-rtpage.html
@@ -7,17 +7,17 @@
     <h1>Some of them. All open source</h1>
     <p>Be grateful, my host provider gives limited space, i can't just upload a "game" what its called nowtimes. (sizes too big, this games are smaller)</p>
 
-    <button onclick="window.location.href='https://ponk445.42web.io/games-rt/wolf3d-master/index.html'">Play doom</button>
+    <button onclick="window.location.href='https://ponk445.frii.site/games-rt/wolf3d-master/index.html'">Play doom</button>
     
-    <button onclick="window.location.href='https://ponk445.42web.io/games-rt/javascript-racer-master/index.html'">a racer game i found</button>
+    <button onclick="window.location.href='https://ponk445.frii.site/games-rt/javascript-racer-master/index.html'">a racer game i found</button>
 
-    <button onclick="window.location.href='https://ponk445.42web.io/games-rt/tetris-master/index.html'">tetris but more beautiful</button>
+    <button onclick="window.location.href='https://ponk445.frii.site/games-rt/tetris-master/index.html'">tetris but more beautiful</button>
 
-    <button onclick="window.location.href='https://ponk445.42web.io/games-rt/SpaceCompany-gh-pages/index.html'">a space thing game, i know, not rt but will move it.</button>
+    <button onclick="window.location.href='https://ponk445.frii.site/games-rt/SpaceCompany-gh-pages/index.html'">a space thing game, i know, not rt but will move it.</button>
 
-    <button onclick="window.location.href='https://ponk445.42web.io/games-rt/emoji-minesweeper-gh-pages/index.html'">Minesweeper (love it) but with emojis.</button>
+    <button onclick="window.location.href='https://ponk445.frii.site/games-rt/emoji-minesweeper-gh-pages/index.html'">Minesweeper (love it) but with emojis.</button>
 
-    <button onclick="window.location.href='https://ponk445.42web.io/games-rt/CHESS-JS-master/index.html'">Play chess.</button>
+    <button onclick="window.location.href='https://ponk445.frii.site/games-rt/CHESS-JS-master/index.html'">Play chess.</button>
 
 </body>
 </html>
