gadgets working now, links corrected

--- a/gadgets/gadgetpage.html
+++ b/gadgets/gadgetpage.html
@@ -7,15 +7,15 @@
     <h1>Use' em</h1>
     <p>Here you have anything from a to z.</p>
     
-    <button onclick="window.location.href='https://ponk445.42web.io/gadgets/speedtest.html'">speedtest</button>
+    <button onclick="window.location.href='https://ponk445.frii.site/gadgets/speedtest.html'">speedtest</button>
     
-    <button onclick="window.location.href='https://ponk445.42web.io/gadgets/calcuator/calc.html'">calcuator</button>
+    <button onclick="window.location.href='https://ponk445.frii.site/gadgets/calcuator/calc.html'">calcuator</button>
 
-    <button onclick="window.location.href='https://ponk445.42web.io/gadgets/cam/camera.html'">camera</button>
+    <button onclick="window.location.href='https://ponk445.frii.site/gadgets/cam/camera.html'">camera</button>
 
-    <button onclick="window.location.href='https://ponk445.42web.io/gadgets/tmstf/tmst.html'">timer and stopwatch</button>
+    <button onclick="window.location.href='https://ponk445.frii.site/gadgets/tmstf/tmst.html'">timer and stopwatch</button>
 
-    <button onclick="window.location.href='https://ponk445.42web.io/gadgets/record/recordsite.html'">recorder</button>
+    <button onclick="window.location.href='https://ponk445.frii.site/gadgets/record/recordsite.html'">recorder</button>
 
 </body>
 </html>
