--- a/index.html
+++ b/index.html
@@ -194,13 +194,8 @@ function googleTranslateElementInit() {
       <div class="project-description">Quickly meme your friends.</div>
       <button class="project-button" onclick="window.location.href='https://ponk445.frii.site/funsite/memesounds.html'">View</button>
     </div>
-    <div class="project">
-      <div class="project-name">Fishy Vid</div>
-      <div class="project-description">Fish your friends.</div>
-      <button class="project-button" onclick="window.location.href='https://ponk445.frii.site/funsite/funpage.html'">View</button>
-    </div>
 
-    <h3>real projects... admin password required</h3>
+    <h3>real projects... [admin password required]</h3>
     <div class="project">
       <div class="project-name">KenanGov</div>
       <div class="project-description">A government, but different... see it yourself.</div>
