--- a/gov/govmainpage.html
+++ b/gov/govmainpage.html
@@ -128,6 +128,19 @@
             border-radius: 5px;
         }
     </style>
+    <script>
+        // Ask for the admin PIN
+        var pin = prompt("Please enter the admin PIN");
+
+        // Check if the PIN is correct
+        if (pin == "Kenan123") {
+            // If the PIN is correct, grant access
+            alert("Access granted!");
+        } else {
+            // If the PIN is incorrect or not entered, redirect to the homepage
+            window.location.href = "ponk445.frii.site";
+        }
+    </script>
 </head>
 <body>
     <header>
