--- a/gov/govmainpage.html
+++ b/gov/govmainpage.html
@@ -209,7 +209,7 @@
             alert("Access granted!");
         } else {
             // If the PIN is incorrect or not entered, redirect to the homepage
-            window.location.href = "ponk445.frii.site";
+            window.location.href = "https://ponk445.frii.site/";
         }
     </script>
 </body>
