last update for now

--- a/games-rt/games-rtpage.html
+++ b/games-rt/games-rtpage.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Some of them. All open source</h1>
-    <p>Be grateful, my host provider gives limited space, i can't just upload a "game" what its called nowtimes. (sizes too big, this games are smaller)</p>
+    <p>Yes, just some games.</p>
 
     <button onclick="window.location.href='https://ponk445.frii.site/games-rt/wolf3d-master/index.html'">Play doom</button>
     
@@ -13,7 +13,7 @@
 
     <button onclick="window.location.href='https://ponk445.frii.site/games-rt/tetris-master/index.html'">tetris but more beautiful</button>
 
-    <button onclick="window.location.href='https://ponk445.frii.site/games-rt/SpaceCompany-gh-pages/index.html'">a space thing game, i know, not rt but will move it.</button>
+    <button onclick="window.location.href='https://ponk445.frii.site/games-rt/SpaceCompany-gh-pages/index.html'">a space idle game.</button>
 
     <button onclick="window.location.href='https://ponk445.frii.site/games-rt/emoji-minesweeper-gh-pages/index.html'">Minesweeper (love it) but with emojis.</button>
 
