--- a/stopusingapple.html
+++ b/stopusingapple.html
@@ -20,16 +20,19 @@
     </style>
   </head>
   <body>
-    <h1>Why You Should Stop Using Apple</h1>
+    <h1>Why You Should Stop Using Apple. Also blocked because the site has some problems with apple devices.</h1>
     <p>Apple products are often seen as high-quality and user-friendly, but there are several reasons why you might want to consider switching to a different brand:</p>
     <ul>
       <li>Expensive: Apple products are typically more expensive than their competitors, which can be a barrier for some users.</li>
       <li>Limited customization: Apple devices are known for their sleek and minimalist design, but this can also mean limited customization options for users who want to personalize their devices.</li>
       <li>Closed ecosystem: Apple's ecosystem is closed, which means that users are limited to using Apple's proprietary software and services. This can be frustrating for users who prefer more flexibility and choice.</li>
-      <li>Planned obsolescence: Some users have criticized Apple for intentionally slowing down older devices through software updates, which can force users to upgrade to newer (and more expensive) models.</li>
+      <li>Planned obsolescence: Users criticize Apple for intentionally slowing down older devices through software updates, which can force users to upgrade to newer (and more expensive) models.</li>
+      <li>AND: IT IS VERY MUCH HARDER TO DEVELOP THINGS FOR IOS THAN FOR OTHER OS's. ALSO FOR WEBDEVELOPMENT</li>
     </ul>
-    <p>Also, they are bad, get something different.</p>
+    <p>Also, they are bad, get something different. (scroll down)</p>
     <h3>if not...</h3>
-    <h1>FUC* OFF</h1>
+    <h2>GO AWAY</h2>
+    <p>just kidding, i only make this for fun, :D  admin code to disable variable "IsApple" is:</p>
+    <p>[DONT GET HOPE IOS FAN AHAHAHAHA ------------ truly kidding, its 865]</p>
   </body>
 </html>
