--- a/privacy.html
+++ b/privacy.html
@@ -1,6 +1,6 @@
 <h1>Privacy Policy for Ponk445</h1>
 
-<p>At Ponk445, accessible from https://ponk445.42web.io/, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by Ponk445 and how we use it.</p>
+<p>At Ponk445, accessible from https://ponk445.frii.site/, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by Ponk445 and how we use it.</p>
 
 <p>If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us.</p>
 
