last change. no other updates planned.

--- a/gadgets/gadgetpage.html
+++ b/gadgets/gadgetpage.html
@@ -4,7 +4,7 @@
     <title>Gadgets</title>
 </head>
 <body>
-    <h1>Use' em</h1>
+    <h1>Use them</h1>
     <p>Here you have anything from a to z.</p>
     
     <button onclick="window.location.href='https://ponk445.frii.site/gadgets/speedtest.html'">speedtest</button>
