--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-T0W3H3S5X1"></script>
@@ -10,9 +10,13 @@
 
     gtag('config', 'G-T0W3H3S5X1')
     </script>
+
+    <meta charset="UTF-8">
+    <meta name="description" content="a site with everything you need.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <script type="text/javascript" charset="UTF-8" src="//cdn.cookie-script.com/s/6d7723b775e29362c4ff914a96554071.js"></script>
-    <title>Projects</title>
+    <title>Ponk445 Home</title>
     <meta name='dmca-site-verification' content='U3Rram5DZGVUSmVCUFZXNnM0eWd4OVJRTnAyUmZ5R3pCb094SHhJV2ZTTT01' />
   
     <div id="google_translate_element"></div>
@@ -145,7 +149,7 @@ function googleTranslateElementInit() {
   <body>
     <h1>Projects</h1>
     <div class="project">
-      <div class="project-name">Adress comparer</div>
+      <div class="project-name">Address comparer</div>
       <div class="project-description">If you are ever in need of it, use it.</div>
       <button class="project-button" onclick="window.location.href='https://ponk445.frii.site/adress-comparer.html'">View</button>
     </div>
@@ -156,7 +160,7 @@ function googleTranslateElementInit() {
     </div>
     <div class="project">
       <div class="project-name">Games</div>
-      <div class="project-description">the good old games.</div>
+      <div class="project-description">Some games</div>
       <button class="project-button" onclick="window.location.href='https://ponk445.frii.site/games-rt/games-rtpage.html'">View</button>
     </div>
     <div class="project">
