--- a/privacy.html
+++ b/privacy.html
@@ -47,7 +47,7 @@
 
 <p>Contact us to get the information from the analytics partners deleted.</p>
 
-<p>You can disagree to the cookies at any time by changing the selection at the cookie button at the bottom left of the homepage (ponk445.42web.io). This will disable all scripts that are integrated for advertising and analystics. By default these cookies are all deactivated, but it is needed to give an exact answer. Note that if you accept and later on change the selection to declining, all the information saved while the scripts were active, is still available, to get these deleted, please contact us.</p>
+<p>You can disagree to the cookies at any time by changing the selection at the cookie button at the bottom left of the homepage (ponk445.frii.site). This will disable all scripts that are integrated for advertising and analystics. By default these cookies are all deactivated, but it is needed to give an exact answer. Note that if you accept and later on change the selection to declining, all the information saved while the scripts were active, is still available, to get these deleted, please contact us.</p>
 
 <h2>Third Party Privacy Policies</h2>
 
